--- a/app/src/main/res/layout/item_talk_send_voice.xml
+++ b/app/src/main/res/layout/item_talk_send_voice.xml
@@ -3,30 +3,31 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/container"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="@dimen/item_talk"
     android:clickable="true"
     android:focusable="true"
     android:foreground="?android:attr/selectableItemBackground"
     tools:viewBindingIgnore="true">
 
     <LinearLayout
-        android:id="@+id/touch_layout"
-        android:layout_width="match_parent"
+        android:id="@+id/voice_layout"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical"
+        android:layout_gravity="center_vertical|end"
         android:layout_marginStart="2dp"
-        android:layout_marginEnd="130dp"
+        android:layout_marginEnd="115dp"
         android:layout_marginBottom="2dp"
         android:background="@drawable/panel_amber"
         android:clipToPadding="false"
         android:elevation="@dimen/toolbar_elevation"
         android:orientation="horizontal"
         android:visibility="visible"
-        tools:visibility="visible">
+        tools:visibility="visible"
+        >
             <ImageButton
                 android:id="@+id/btn_play"
-                android:layout_width="@dimen/bottom_pnl_small_btn_size2"
-                android:layout_height="@dimen/bottom_pnl_small_btn_size2"
+                android:layout_width="@dimen/item_voice_height"
+                android:layout_height="@dimen/item_voice_height"
                 android:layout_gravity="center"
                 android:layout_marginEnd="@dimen/spacing_zero"
                 android:adjustViewBounds="true"
@@ -37,13 +38,12 @@
                 android:tint="@color/white" />
         <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="@dimen/item_waveform_height"
-
+            android:layout_height="@dimen/item_voice_height"
             >
         <com.perry.audiorecorder.app.widget.SimpleWaveformView
             android:id="@+id/item_waveform"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/item_waveform_height"
+            android:layout_height="@dimen/item_voice_height"
             android:layout_gravity="start|center_vertical"
             android:layout_marginStart="@dimen/spacing_zero"
             android:layout_marginTop="@dimen/spacing_zero"
@@ -56,6 +56,54 @@
             android:max="1000"
             android:progress="0"
             />
+            <TextView
+                android:id="@+id/list_item_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:ellipsize="end"
+                android:fontFamily="sans-serif-medium"
+                android:maxLines="1"
+                android:paddingStart="@dimen/spacing_tiny"
+                android:paddingTop="@dimen/spacing_tiny"
+                android:paddingEnd="@dimen/spacing_tiny"
+                android:textColor="@color/text_primary_light"
+                android:textSize="@dimen/text_normal"
+                tools:text="7896年76月58日 36点89分78秒"
+                android:maxLength="21"
+                android:layout_gravity="end"
+                android:visibility="invisible"
+                />
+            <TextView
+                android:id="@+id/list_item_date"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="end|top"
+                android:maxLines="1"
+                android:maxLength="21"
+                android:paddingTop="@dimen/item_margin_zero"
+                android:paddingStart="@dimen/item_margin_lr"
+                android:paddingEnd="@dimen/item_margin_lr"
+                android:textColor="@color/text_primary_light2"
+                android:textSize="@dimen/text_smallest"
+                android:visibility="visible"
+                tools:text="@string/app_name" />
+
+            <TextView
+                android:id="@+id/list_item_info"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:ellipsize="end"
+                android:fontFamily="sans-serif-light"
+                android:maxLines="1"
+                android:paddingStart="@dimen/item_margin_lr"
+                android:paddingTop="2dp"
+                android:paddingEnd="@dimen/item_margin_lr"
+                android:paddingBottom="@dimen/item_margin_zero"
+                android:textColor="@color/text_primary_light2"
+                android:textSize="@dimen/text_smallest"
+                tools:text="M4a, 44.1kHz, 128kbps, Stereo"
+                android:layout_gravity="end|bottom"
+                />
         </FrameLayout>
 
     </LinearLayout>
@@ -71,27 +119,8 @@
         android:layout_gravity="center_vertical"
         android:layout_marginStart="@dimen/spacing_normal"
         android:layout_marginEnd="56dp"
+        android:elevation="@dimen/toolbar_elevation"
         android:orientation="vertical">
-
-        <FrameLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <TextView
-                android:id="@+id/list_item_name"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:ellipsize="end"
-                android:fontFamily="sans-serif-medium"
-                android:maxLines="1"
-                android:paddingStart="@dimen/spacing_tiny"
-                android:paddingTop="@dimen/spacing_medium"
-                android:paddingEnd="@dimen/spacing_normal"
-                android:textColor="@color/text_primary_light"
-                android:textSize="@dimen/text_normal"
-                tools:text="7896年76月58日 36点89分78秒"
-                android:maxLength="21"
-                />
 
             <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/list_item_bookmark"
@@ -108,59 +137,38 @@
                 android:singleLine="true"
                 android:text="链云AI"
                 android:textSize="12dp" />
-        </FrameLayout>
 
-        <FrameLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end"
+            android:orientation="horizontal"
+            >
             <TextView
-                android:id="@+id/list_item_description"
+                android:id="@+id/item_duration_cur"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="end"
                 android:maxLines="1"
                 android:paddingStart="@dimen/spacing_tiny"
-                android:paddingEnd="@dimen/spacing_medium"
                 android:textColor="@color/text_primary_light2"
-                android:textSize="@dimen/text_normal"
-                tools:text="@string/app_name" />
-
+                android:textSize="@dimen/text_small"
+                tools:text="60/" />
             <TextView
-                android:id="@+id/list_item_date"
+                android:id="@+id/item_duration"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="start"
                 android:maxLines="1"
-                android:paddingStart="@dimen/spacing_tiny"
-                android:paddingEnd="@dimen/spacing_small"
+                android:paddingEnd="@dimen/spacing_tiny"
                 android:textColor="@color/text_primary_light2"
-                android:textSize="@dimen/text_normal"
-                android:visibility="invisible"
-                tools:text="@string/app_name" />
-
-            <TextView
-                android:id="@+id/list_item_info"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="start"
-                android:ellipsize="end"
-                android:fontFamily="sans-serif-light"
-                android:maxLines="1"
-                android:paddingStart="@dimen/spacing_tiny"
-                android:paddingTop="2dp"
-                android:paddingEnd="@dimen/spacing_medium"
-                android:paddingBottom="@dimen/spacing_medium"
-                android:textColor="@color/text_primary_light2"
-                android:textSize="@dimen/text_normal"
-                tools:text="M4a, 44.1kHz, 128kbps, Stereo" />
-        </FrameLayout>
+                android:textSize="@dimen/text_small"
+                tools:text="60''" />
+        </LinearLayout>
     </LinearLayout>
 
     <com.perry.audiorecorder.app.widget.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/item_iv_avatar"
-        android:layout_width="45dp"
-        android:layout_height="45dp"
+        android:layout_width="@dimen/item_avatar"
+        android:layout_height="@dimen/item_avatar"
         android:layout_gravity="center_vertical|end"
         android:layout_marginEnd="10dp"
         android:background="?android:selectableItemBackgroundBorderless"
