--- a/app/src/main/res/layout/item_talk_send_voice.xml
+++ b/app/src/main/res/layout/item_talk_send_voice.xml
@@ -9,7 +9,7 @@
     android:foreground="?android:attr/selectableItemBackground"
     tools:viewBindingIgnore="true">
 
-    <LinearLayout
+    <FrameLayout
         android:id="@+id/voice_layout"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
@@ -28,17 +28,20 @@
                 android:id="@+id/btn_play"
                 android:layout_width="@dimen/item_voice_height"
                 android:layout_height="@dimen/item_voice_height"
-                android:layout_gravity="center"
+                android:layout_gravity="center_vertical|start"
                 android:layout_marginEnd="@dimen/spacing_zero"
                 android:adjustViewBounds="true"
                 android:background="?android:selectableItemBackgroundBorderless"
                 android:contentDescription="@null"
                 android:scaleType="center"
                 android:src="@drawable/ic_play"
-                android:tint="@color/white" />
+                android:tint="@color/white"
+
+                />
         <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="@dimen/item_voice_height"
+            android:paddingStart="@dimen/item_voice_height"
             >
         <com.perry.audiorecorder.app.widget.SimpleWaveformView
             android:id="@+id/item_waveform"
@@ -73,40 +76,41 @@
                 android:layout_gravity="end"
                 android:visibility="invisible"
                 />
-            <TextView
-                android:id="@+id/list_item_date"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="end|top"
-                android:maxLines="1"
-                android:maxLength="21"
-                android:paddingTop="@dimen/item_margin_zero"
-                android:paddingStart="@dimen/item_margin_lr"
-                android:paddingEnd="@dimen/item_margin_lr"
-                android:textColor="@color/text_primary_light2"
-                android:textSize="@dimen/text_smallest"
-                android:visibility="visible"
-                tools:text="@string/app_name" />
-
-            <TextView
-                android:id="@+id/list_item_info"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:ellipsize="end"
-                android:fontFamily="sans-serif-light"
-                android:maxLines="1"
-                android:paddingStart="@dimen/item_margin_lr"
-                android:paddingTop="2dp"
-                android:paddingEnd="@dimen/item_margin_lr"
-                android:paddingBottom="@dimen/item_margin_zero"
-                android:textColor="@color/text_primary_light2"
-                android:textSize="@dimen/text_smallest"
-                tools:text="M4a, 44.1kHz, 128kbps, Stereo"
-                android:layout_gravity="end|bottom"
-                />
         </FrameLayout>
+        <TextView
+            android:id="@+id/list_item_date"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end|top"
+            android:maxLines="1"
+            android:maxLength="21"
+            android:paddingTop="@dimen/item_margin_zero"
+            android:paddingStart="@dimen/item_margin_lr"
+            android:paddingEnd="@dimen/item_margin_lr"
+            android:textColor="@color/text_primary_light2"
+            android:textSize="@dimen/text_ss"
+            android:visibility="visible"
+            tools:text="@string/app_name"
+            android:ellipsize="start"
+            />
 
-    </LinearLayout>
+        <TextView
+            android:id="@+id/list_item_info"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:ellipsize="end"
+            android:fontFamily="sans-serif-light"
+            android:maxLines="1"
+            android:paddingStart="@dimen/item_margin_lr"
+            android:paddingTop="2dp"
+            android:paddingEnd="@dimen/item_margin_lr"
+            android:paddingBottom="@dimen/item_margin_zero"
+            android:textColor="@color/text_primary_light2"
+            android:textSize="@dimen/text_ss"
+            tools:text="M4a, 44.1kHz, 128kbps, Stereo"
+            android:layout_gravity="end|bottom"
+            />
+    </FrameLayout>
     <View
         android:layout_width="match_parent"
         android:layout_height="@dimen/divider"
