从语音最下面添加新的语音开始

--- a/app/src/main/res/layout/item_talk_send_voice.xml
+++ b/app/src/main/res/layout/item_talk_send_voice.xml
@@ -33,7 +33,7 @@
                 android:adjustViewBounds="true"
                 android:background="?android:selectableItemBackgroundBorderless"
                 android:contentDescription="@null"
-                android:scaleType="center"
+                android:scaleType="fitCenter"
                 android:src="@drawable/ic_play"
                 android:tint="@color/white"
 
