--- a/app/src/main/res/layout/activity_talk.xml
+++ b/app/src/main/res/layout/activity_talk.xml
@@ -2,6 +2,7 @@
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/root"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -51,24 +52,22 @@
                 android:id="@+id/btn_bookmarks"
                 android:layout_width="@dimen/bottom_pnl_small_btn_size"
                 android:layout_height="@dimen/bottom_pnl_small_btn_size"
-                android:contentDescription="@null"
                 android:layout_gravity="center_vertical|end"
                 android:background="?android:selectableItemBackgroundBorderless"
+                android:contentDescription="@null"
                 android:src="@drawable/ic_bookmark_bordered"
-                android:visibility="gone"
-                />
+                android:visibility="gone" />
 
             <ImageButton
                 android:id="@+id/btn_share"
                 android:layout_width="@dimen/bottom_pnl_small_btn_size"
                 android:layout_height="@dimen/bottom_pnl_small_btn_size"
+                android:layout_gravity="center_vertical|end"
                 android:adjustViewBounds="true"
                 android:background="?android:selectableItemBackgroundBorderless"
                 android:contentDescription="@null"
                 android:scaleType="fitCenter"
-                android:src="@drawable/waveform"
-                android:layout_gravity="center_vertical|end"
-                />
+                android:src="@drawable/waveform" />
 
         </LinearLayout>
 
@@ -105,8 +104,7 @@
                 android:paddingRight="@dimen/spacing_normal"
                 android:text="@string/selected"
                 android:textColor="@color/text_primary_light"
-                android:textSize="@dimen/text_large"
-                />
+                android:textSize="@dimen/text_large" />
 
             <ImageButton
                 android:id="@+id/btn_share_multi"
@@ -141,10 +139,106 @@
         </LinearLayout>
     </FrameLayout>
 
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:id="@+id/frame_bottom"
+            >
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="@color/divider"
+                android:layout_gravity="top"
+                />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="60dp"
+                android:orientation="horizontal"
+                android:visibility="visible"
+                android:id="@+id/linear_voice"
+                >
+
+                <androidx.appcompat.widget.AppCompatImageButton
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="center"
+                    android:layout_weight="7"
+                    android:gravity="center"
+                    android:text="键盘"
+                    android:id="@+id/button_switch_text"
+                    android:src="@drawable/baseline_keyboard"
+                    android:scaleType="fitCenter"
+                    android:background="@null"
+                    />
+
+                <com.perry.audiorecorder.app.widget.RecordAudioButton
+                    android:id="@+id/btnVoice"
+                    style="?android:attr/borderlessButtonStyle"
+                    android:layout_width="match_parent"
+                    android:layout_height="40dp"
+                    android:layout_margin="10dp"
+                    android:layout_weight="1"
+                    android:background="@drawable/btn_chat_press_normal"
+                    android:text="按住 说话"
+                    android:textColor="#7e7e7e" />
+            </LinearLayout>
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:gravity="center"
+                android:id="@+id/relative_text"
+                android:visibility="gone"
+                android:maxHeight="240dp"
+                >
+                <androidx.appcompat.widget.AppCompatImageButton
+                    android:id="@+id/button_switch_voice"
+                    android:layout_width="50dp"
+                    android:layout_height="40dp"
+                    android:layout_gravity="center"
+                    android:gravity="center"
+                    android:src="@drawable/baseline_mic_none"
+                    android:scaleType="fitCenter"
+                    android:background="@null"
+                    android:layout_centerVertical="true"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginBottom="10dp"
+                    />
+                <androidx.appcompat.widget.AppCompatButton
+                    android:id="@+id/button_send"
+                    android:layout_width="70dp"
+                    android:layout_height="40dp"
+                    android:gravity="center"
+                    android:text="发送"
+                    android:layout_alignParentEnd="true"
+                    android:background="@drawable/raised_button_background"
+                    android:layout_marginEnd="10dp"
+                    android:layout_centerVertical="true"
+                    />
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/edit_text"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="start|center_vertical"
+                    android:layout_gravity="center"
+                    android:hint="发消息..."
+                    android:maxHeight="240dp"
+                    android:nextFocusUp="@id/recycler_view"
+                    android:layout_toLeftOf="@+id/button_send"
+                    android:layout_toRightOf="@+id/button_switch_voice"
+                    />
+            </RelativeLayout>
+        </FrameLayout>
     <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1">
+        android:layout_height="match_parent"
+        android:id="@+id/frame_content"
+        android:layout_above="@+id/frame_bottom"
+        >
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recycler_view"
@@ -176,18 +270,5 @@
 
     </FrameLayout>
 
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="#ccc" />
-
-    <com.perry.audiorecorder.app.widget.RecordAudioButton
-        android:id="@+id/btnVoice"
-        style="?android:attr/borderlessButtonStyle"
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:layout_margin="10dp"
-        android:background="@drawable/btn_chat_press_normal"
-        android:text="按住 说话"
-        android:textColor="#7e7e7e" />
+    </RelativeLayout>
 </LinearLayout>
