--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -15,8 +15,8 @@
   -->
 
 <resources>
-
-	<style name="AppTheme" parent="@android:style/Theme.Material">
+	<!--	<style name="AppTheme" parent="@android:style/Theme.Material">-->
+	<style name="AppTheme" parent="@style/Theme.AppCompat">
 		<item name="android:colorPrimary">@color/md_blue_gray_700</item>
 		<item name="android:colorPrimaryDark">@color/md_blue_gray_700</item>
 		<item name="android:colorAccent">@color/md_yellow_A700</item>
