--- a/app/src/main/res/layout/item_talk_send_text.xml
+++ b/app/src/main/res/layout/item_talk_send_text.xml
@@ -7,14 +7,16 @@
     android:clickable="true"
     android:focusable="true"
     android:foreground="?android:attr/selectableItemBackground"
-    tools:viewBindingIgnore="true">
+    tools:viewBindingIgnore="true"
+    android:minHeight="@dimen/item_talk"
+    >
 
     <FrameLayout
         android:id="@+id/voice_layout"
-        android:layout_width="200dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical|end"
-        android:layout_marginStart="2dp"
+        android:layout_marginStart="10dp"
         android:layout_marginEnd="115dp"
         android:layout_marginBottom="2dp"
         android:background="@drawable/panel_amber"
@@ -24,10 +26,10 @@
         android:visibility="visible"
         tools:visibility="visible"
         >
-        <FrameLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            >
+<!--        <FrameLayout-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            >-->
             <TextView
                 android:id="@+id/list_item_name"
                 android:layout_width="wrap_content"
@@ -35,15 +37,19 @@
                 android:ellipsize="end"
                 android:fontFamily="sans-serif-medium"
                 android:paddingStart="@dimen/spacing_tiny"
-                android:paddingTop="@dimen/spacing_tiny"
+                android:paddingTop="@dimen/spacing_zero"
                 android:paddingEnd="@dimen/spacing_tiny"
                 android:textColor="@color/text_primary_light"
                 android:textSize="@dimen/text_normal"
                 tools:text="发送的聊天内容发送的聊天内容发送的聊天内容发送的聊天内容发送的聊天内容发送的聊天内容"
                 android:layout_gravity="end"
                 android:visibility="visible"
+                android:minHeight="@dimen/item_voice_height"
+                android:gravity="center"
+                android:layout_marginTop="@dimen/spacing_tiny"
+                android:layout_marginBottom="@dimen/spacing_tiny"
                 />
-        </FrameLayout>
+<!--        </FrameLayout>-->
         <TextView
             android:id="@+id/list_item_date"
             android:layout_width="wrap_content"
@@ -108,6 +114,7 @@
                 android:singleLine="true"
                 android:text="链云AI"
                 android:textSize="12dp"
+                android:layout_marginTop="@dimen/spacing_medium"
                 />
 
     </LinearLayout>
