--- a/app/src/main/res/layout/item_talk_send_text.xml
+++ b/app/src/main/res/layout/item_talk_send_text.xml
@@ -17,14 +17,17 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical|end"
         android:layout_marginStart="10dp"
-        android:layout_marginEnd="115dp"
-        android:layout_marginBottom="2dp"
+        android:layout_marginEnd="60dp"
+        android:paddingTop="@dimen/spacing_zero"
+        android:paddingBottom="@dimen/spacing_zero"
         android:background="@drawable/panel_amber"
         android:clipToPadding="false"
         android:elevation="@dimen/toolbar_elevation"
         android:orientation="horizontal"
         android:visibility="visible"
         tools:visibility="visible"
+        android:layout_marginTop="@dimen/spacing_tiny"
+        android:layout_marginBottom="@dimen/spacing_tiny"
         >
 <!--        <FrameLayout-->
 <!--            android:layout_width="match_parent"-->
@@ -37,7 +40,8 @@
                 android:ellipsize="end"
                 android:fontFamily="sans-serif-medium"
                 android:paddingStart="@dimen/spacing_tiny"
-                android:paddingTop="@dimen/spacing_zero"
+                android:paddingTop="@dimen/border"
+                android:paddingBottom="@dimen/border"
                 android:paddingEnd="@dimen/spacing_tiny"
                 android:textColor="@color/text_primary_light"
                 android:textSize="@dimen/text_normal"
@@ -46,8 +50,6 @@
                 android:visibility="visible"
                 android:minHeight="@dimen/item_voice_height"
                 android:gravity="center"
-                android:layout_marginTop="@dimen/spacing_tiny"
-                android:layout_marginBottom="@dimen/spacing_tiny"
                 />
 <!--        </FrameLayout>-->
         <TextView
@@ -115,6 +117,7 @@
                 android:text="链云AI"
                 android:textSize="12dp"
                 android:layout_marginTop="@dimen/spacing_medium"
+                android:visibility="gone"
                 />
 
     </LinearLayout>
