--- a/app/src/main/res/layout/item_talk_send_voice.xml
+++ b/app/src/main/res/layout/item_talk_send_voice.xml
@@ -15,7 +15,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical|end"
         android:layout_marginStart="2dp"
-        android:layout_marginEnd="115dp"
+        android:layout_marginEnd="60dp"
         android:layout_marginBottom="2dp"
         android:background="@drawable/panel_amber"
         android:clipToPadding="false"
@@ -120,11 +120,13 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical"
+        android:layout_gravity="center_vertical|bottom"
         android:layout_marginStart="@dimen/spacing_normal"
         android:layout_marginEnd="56dp"
         android:elevation="@dimen/toolbar_elevation"
-        android:orientation="vertical">
+        android:orientation="vertical"
+
+        >
 
             <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/list_item_bookmark"
@@ -140,7 +142,8 @@
                 android:scaleType="center"
                 android:singleLine="true"
                 android:text="链云AI"
-                android:textSize="12dp" />
+                android:textSize="12dp"
+                android:visibility="gone"/>
 
         <LinearLayout
             android:layout_width="wrap_content"
