消息发送成功

--- a/app/src/main/res/layout/item_talk_receive_text.xml
+++ b/app/src/main/res/layout/item_talk_receive_text.xml
@@ -15,9 +15,9 @@
         android:id="@+id/voice_layout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical|end"
-        android:layout_marginStart="10dp"
-        android:layout_marginEnd="@dimen/item_msg_rl"
+        android:layout_gravity="center_vertical"
+        android:layout_marginStart="@dimen/item_msg_rl"
+        android:layout_marginEnd="10dp"
         android:paddingTop="@dimen/spacing_zero"
         android:paddingBottom="@dimen/spacing_zero"
         android:background="@drawable/panel_amber"
@@ -126,8 +126,9 @@
         android:id="@+id/item_iv_avatar"
         android:layout_width="@dimen/item_avatar"
         android:layout_height="@dimen/item_avatar"
-        android:layout_gravity="center_vertical|end"
-        android:layout_marginEnd="@dimen/item_msg_avatar"
+        android:layout_gravity="center_vertical"
+        android:layout_marginEnd="10dp"
+        android:layout_marginStart="@dimen/item_msg_avatar"
         android:background="?android:selectableItemBackgroundBorderless"
         android:src="@mipmap/logo_lianyun"
         app:civ_border_color="#DD44FFFF"
