--- a/app/src/main/res/layout/item_talk_send_voice.xml
+++ b/app/src/main/res/layout/item_talk_send_voice.xml
@@ -21,11 +21,12 @@
         android:visibility="visible"
         tools:visibility="visible"
         >
-        <androidx.appcompat.widget.AppCompatButton
+        <androidx.appcompat.widget.AppCompatImageButton
             android:layout_width="@dimen/item_voice_height"
             android:layout_height="@dimen/item_voice_height"
-            android:background="@drawable/button_translucent"
-            android:text="再次发送"
+            android:src="@drawable/baseline_refresh_24"
+            android:background="@null"
+            android:text=""
             android:layout_gravity="center"
             android:textSize="13dp"
             android:id="@+id/button_failed"
