--- a/app/src/main/res/layout/item_talk_send_voice.xml
+++ b/app/src/main/res/layout/item_talk_send_voice.xml
@@ -60,9 +60,7 @@
                 android:contentDescription="@null"
                 android:scaleType="fitCenter"
                 android:src="@drawable/ic_play"
-                android:tint="@color/white"
-
-                />
+                android:tint="@color/white"/>
         <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="@dimen/item_voice_height"
