科大讯飞 语音合成 终于开口说话了；我去

--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -350,6 +350,7 @@
 				android:paddingTop="@dimen/spacing_medium"
 				android:paddingBottom="@dimen/spacing_medium"
 				android:drawablePadding="@dimen/spacing_normal"
+			android:visibility="gone"
 				/>
 
 		<TextView
@@ -365,6 +366,7 @@
 				android:paddingTop="@dimen/spacing_medium"
 				android:paddingBottom="@dimen/spacing_medium"
 				android:drawablePadding="@dimen/spacing_normal"
+			android:visibility="gone"
 				/>
 
 		<TextView
