数据库添加字段了

--- a/app/src/main/res/layout/activity_talk.xml
+++ b/app/src/main/res/layout/activity_talk.xml
@@ -276,8 +276,8 @@
             android:visibility="visible"
             android:text="测试播放"
             android:gravity="start|center_vertical"
-            android:elevation="10dp"
             android:paddingStart="10dp"
+            android:paddingTop="5dp"
             />
     </FrameLayout>
 
