修改显示的bug第二次进入无法播放语音的字段添加

--- a/app/src/main/res/layout/activity_talk.xml
+++ b/app/src/main/res/layout/activity_talk.xml
@@ -173,6 +173,7 @@
                     android:src="@drawable/baseline_keyboard"
                     android:scaleType="fitCenter"
                     android:background="@null"
+                    android:visibility="gone"
                     />
 
                 <com.perry.audiorecorder.app.widget.RecordAudioButton
