--- a/app/src/main/res/layout/item_talk_receive_text.xml
+++ b/app/src/main/res/layout/item_talk_receive_text.xml
@@ -44,7 +44,7 @@
         android:orientation="horizontal"
         android:visibility="visible"
         tools:visibility="visible"
-        android:layout_marginTop="@dimen/spacing_tiny"
+        android:layout_marginTop="@dimen/spacing_xsmall"
         android:layout_marginBottom="@dimen/spacing_tiny"
         >
 <!--        <FrameLayout-->
@@ -126,36 +126,6 @@
         android:layout_height="@dimen/divider"
         android:layout_gravity="bottom"
         android:background="@color/divider_light" />
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="top"
-        android:layout_marginStart="@dimen/spacing_normal"
-        android:layout_marginEnd="56dp"
-        android:elevation="@dimen/toolbar_elevation"
-        android:orientation="vertical"
-        >
-            <androidx.appcompat.widget.AppCompatTextView
-                android:id="@+id/list_item_bookmark"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_gravity="top|end"
-                android:adjustViewBounds="true"
-                android:background="?android:selectableItemBackgroundBorderless"
-                android:contentDescription="@null"
-                android:drawableStart="@drawable/ic_bookmark_bordered_small"
-                android:lines="1"
-                android:paddingEnd="5dp"
-                android:scaleType="center"
-                android:singleLine="true"
-                android:text="链云AI"
-                android:textSize="12dp"
-                android:layout_marginTop="@dimen/spacing_medium"
-                android:visibility="gone"
-                />
-
-    </LinearLayout>
 
     <com.perry.audiorecorder.app.widget.CircleImageView
         xmlns:app="http://schemas.android.com/apk/res-auto"
