--- a/app/src/main/res/layout/item_talk_receive_text.xml
+++ b/app/src/main/res/layout/item_talk_receive_text.xml
@@ -107,7 +107,6 @@
 
         <androidx.appcompat.widget.AppCompatImageButton
             android:id="@+id/btn_tts_play"
-            android:tint="@color/white"
             android:layout_width="@dimen/item_voice_height"
             android:layout_height="@dimen/item_voice_height"
             android:layout_centerInParent="true"
@@ -119,7 +118,10 @@
             android:background="?android:selectableItemBackgroundBorderless"
             android:contentDescription="@null"
             android:scaleType="fitCenter"
-            android:src="@drawable/ic_play" />
+            android:src="@drawable/ic_play"
+            android:tint="@color/white"
+            android:layout_marginTop="20dp"
+            />
     </RelativeLayout>
     <View
         android:layout_width="match_parent"
